compiler/testData/diagnostics/testsWithStdLib/coroutines/suspendFunctionType/suspendFunctionN.fir.kt
// JAVAC_SKIP
typealias Test1 = <!OTHER_ERROR!>SuspendFunction0<Unit><!>
typealias Test2 = <!OTHER_ERROR!>kotlin.SuspendFunction0<Unit><!>
typealias Test3 = kotlin.coroutines.SuspendFunction0<Unit>